

		CHANGES IN R VERSION 1.8.1


NEW FEATURES

    o	There is now a "Complex" S3 group generic (a side-effect of
	fixing up the corresponding S4 group generic).

    o	help("regex") will now give a (preliminary) description of the
	regular expressions used in R.  More details (including a
	description of Perl-like regular expressions) will be added to
	later releases of R.


BUG FIXES

    o	symnum(x) now behaves as documented when length(x) == 0 and uses
	lower.triangular = FALSE for logical arrays.

    o	c() now has a method for "noquote" objects and hence works as
	expected.

    o	split(1:10, c(1,2)) no longer gives a spurious warning.

    o	The "Complex" S4 group generic now works.

    o	abbreviate() doesn't get into infinite loops on input that differs
	only by leading/trailing space

    o	Added check for user interrupt in Rvprintf to allow printing to be
	interrupted.

    o	Fixed bug that would cause segfault on protect stack overflow.

    o	crossprod() on matrices with zero extents would return an
	uninitialized matrix (rather than one filled with zeros).

    o	DF[[i,j]] for a data frame used row j and col i, not as intended
	row i and col j.

    o	Even more user errors in recursive indexing of lists are now
	caught.  (PR#4486)

    o	cor(<matrix>, use = "pairwise") gave wrong result in 1.8.0 (only).
	(PR#4646)

    o   merge.data.frame could give incorrect names when one of the
	arguments had only one column.  (PR#4299)

    o   Subsetting a one-dimensional array dropped dimensions even when
	they were not of length one.  (Related to PR#4110)

    o	The plot() method for `ecdf' objects, plot.ecdf(), now allows to
	set a `ylab' argument (different from the default).

    o	cor.test(*, method="spearman") gave wrong results `randomly'
	(because of a wrong type passed to C; PR#4718).




		CHANGES IN R VERSION 1.8.0


MACOS CHANGES

    o	As from this release there is only one R port for the