@@ -1,7 +1,7 @@
-R:        3-901167-50-1
-R-FAQ:	  3-901167-51-X
-R-admin:  3-901167-52-8
-R-data:   3-901167-53-6
-R-exts:   3-901167-54-4
-R-intro:  3-901167-55-2
-R-lang:   3-901167-56-0
+R:        3-900051-00-3
+R-FAQ:	  3-900051-01-1
+R-admin:  3-900051-02-X
+R-data:   3-900051-03-8
+R-exts:   3-900051-04-6
+R-intro:  3-900051-05-4
+R-lang:   3-900051-06-2
