@@ -50,11 +50,11 @@ except that this permission notice may be stated in a translation
 approved by the R Development Core Team.
 @end macro
 
-@set ISBN-FAQ ISBN 3-901167-51-X
-@set ISBN-admin ISBN 3-901167-52-8
-@set ISBN-data ISBN 3-901167-53-6
-@set ISBN-exts ISBN 3-901167-54-4
-@set ISBN-intro ISBN 3-901167-55-2
-@set ISBN-lang ISBN 3-901167-56-0
+@set ISBN-FAQ ISBN 3-900051-01-1
+@set ISBN-admin ISBN 3-900051-02-X
+@set ISBN-data ISBN 3-900051-03-8
+@set ISBN-exts ISBN 3-900051-04-6
+@set ISBN-intro ISBN 3-900051-05-4
+@set ISBN-lang ISBN 3-900051-06-2
 
 
