@@ -55,7 +55,7 @@
   License.  For more information about these matters, see
   \textsf{http://www.gnu.org/copyleft/gpl.html}.
   \par\bigskip\noindent
-  ISBN 3-901167-50-1
+  ISBN 3-900051-00-3
 \end{titlepage}
 
 \pagenumbering{roman}
