@@ -1,0 +1,15 @@
+\name{citation}
+\title{Citing R in Publications}
+\alias{license}
+\alias{licence}
+\description{
+  How to cite R in publications.
+}
+\usage{
+citation()
+}
+\details{
+  Execute function \code{citation()} for information on how to cite R in
+  publications. 
+}
+\keyword{misc}
