@@ -27,14 +27,16 @@
 
 void PrintGreeting(void)
 {
-    Rprintf("\nR : Copyright %s, The R Development Core Team\n", R_YEAR);
-    Rprintf("Version %s.%s %s (%s-%s-%s)\n\n",
+    Rprintf("\nR : Copyright %s, The R Foundation for Statistical Computing\n",
+	    R_YEAR);
+    Rprintf("Version %s.%s %s (%s-%s-%s), ISBN 3-900051-00-3\n\n",
 	    R_MAJOR, R_MINOR, R_STATUS, R_YEAR, R_MONTH, R_DAY);
     Rprintf("R is free software and comes with ABSOLUTELY NO WARRANTY.\n"
 	    "You are welcome to redistribute it under certain conditions.\n"
 	    "Type 'license()' or 'licence()' for distribution details.\n\n");
     Rprintf("R is a collaborative project with many contributors.\n"
-	    "Type 'contributors()' for more information.\n\n");
+	    "Type 'contributors()' for more information and\n"
+	    "'citation()' on how to cite R in publications.\n\n");
     Rprintf("Type 'demo()' for some demos, 'help()' for on-line help, or\n"
             "'help.start()' for a HTML browser interface to help.\n"
 	    "Type 'q()' to quit R.\n\n");
